--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,3 +1,5 @@
+/* block specific CSS goes here */
+
 main .hero-container > div {
   max-width: unset;
 }
@@ -5,29 +7,46 @@ main .hero-container > div {
 main .hero-container {
   padding: 0;
 }
-
-.hero {
+  
+main .hero {
   position: relative;
-  padding: 32px;
-  min-height: 300px;
+  /* padding: 32px; */
+  /* min-height: 300px; */
 }
 
-.hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+main .hero h1 {
+  position: absolute;
+  bottom: 35%;
+  margin: 0 auto;
   color: white;
+  left:11%;
+  width: 50%;
+  background-color: #7c6060;
+  padding: 20px;
 }
 
-.hero picture {
+main .hero video {
+  width: 100%;
+}
+
+@media (min-width: 600px) {
+  main .hero h1 {
+    font-size: 48px;
+  }
+}
+
+/* main .hero picture {
   position: absolute;
   z-index: -1;
-  inset: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   object-fit: cover;
   box-sizing: border-box;
-}
+} */
 
-.hero img {
+main .hero img {
   object-fit: cover;
   width: 100%;
   height: 100%;
